# variadics_please

./: Cargo.toml  README.md  RELEASES.md  deny.toml  typos.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  performance_regression.md
.github/workflows/: action-on-PR-labeled.yml  ci-comment-failures.yml  ci.yml  dependencies.yml  post-release.yml  release.yml  validation-jobs.yml  weekly.yml  welcome.yml
benches/: Cargo.toml  README.md
documentation/: debugging.md
errors/: Cargo.toml  V0001.md
errors/src/: lib.rs
examples/demonstrations/: all_tuples.rs
src/: lib.rs
tests/: basic_all_tuples.rs  basic_all_tuples_enumerated.rs  basic_all_tuples_with_size.rs  fake_variadic_all_tuples.rs  fake_variadic_all_tuples_enumerated.rs  fake_variadic_all_tuples_with_size.rs
tools/compile_fail_utils/: Cargo.toml
tools/compile_fail_utils/tests/example_tests/: basic_test.rs
