[package]
name = "compile_fail_utils"
edition = "2021"
description = "Utilities for compile tests"
homepage = "https://github.com/bevyengine/variadics_please"
repository = "https://github.com/bevyengine/variadics_please"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ui_test = "0.23.0"

[[test]]
name = "example"
harness = false
